Adding programming challenge 05, chapter 2

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /04_Challenge01/build/
 /05_Challenge03/nbproject/private/
 /05_Challenge03/build/
+/06_Challenge_05/nbproject/private/
+/06_Challenge_05/build/
