Adding chap 2, programming challenge 12

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /05_Challenge03/build/
 /06_Challenge_05/nbproject/private/
 /06_Challenge_05/build/
+/07_Challenge_12/nbproject/private/
+/07_Challenge_12/build/
