Adding updates for java book

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /06_Challenge_05/build/
 /07_Challenge_12/nbproject/private/
 /07_Challenge_12/build/
+/08_Challenge_19/nbproject/private/
+/10_chap3_Challenge_01/nbproject/private/
+/10_chap3_Challenge_01/build/
