adding new stuff

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /08_Challenge_19/nbproject/private/
 /10_chap3_Challenge_01/nbproject/private/
 /10_chap3_Challenge_01/build/
+/11_CodeListing_4-17/nbproject/private/
+/11_CodeListing_4-17/build/
+/class_test/nbproject/private/
+/class_test/build/
+/CalcTest/nbproject/private/
+/CalcTest/build/
